# infection

./: Cargo.toml  README.md  Settings.toml  build.rs
src/: main.rs
src/app/: mod.rs  model.rs  particle.rs  settings.rs
src/utils/: physics.rs
