[package]
name = "infection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
lazy_static = "1.4.0"
nannou = "0.18.1"
nannou_egui = "0.5.0"
rapier2d = { version = "0.17.0", features = ["parallel", "simd-stable"] }


[profile.dev.package.nannou]
opt-level = 3

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
codegen-units = 1
